@@ -10,6 +10,7 @@
 
 == Feedback
 
+- Tony Day - http://github.com/tonyday - every and overlapping timeout issue
 - Nate Wiger (Schedulable call/trigger issue)
 - Aldric (readme errors)
 - Kenneth Kalmer (daemon-kit)
